--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "typescript": "^5.4.5"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.13.0",
+    "typescript": "^5.4.5",
+    "zod": "^3.23.8"
   }
 }
