--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.13.0",
     "typescript": "^5.4.5",
     "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "prisma": "^5.13.0"
   }
 }
